coffee-shop/base/database.yaml
---
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: coffee-shop-database
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  strategy:
    type: Recreate
    recreateParams:
      timeoutSeconds: 600
    resources: {}
    activeDeadlineSeconds: 21600
  triggers:
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - postgresql
        from:
          kind: ImageStreamTag
          namespace: openshift
          name: 'postgresql:10-el8'
        lastTriggeredImage: >-
          image-registry.openshift-image-registry.svc:5000/openshift/postgresql@sha256:6d97b69c1dd606d5ca679bbae3d6e6a8073bb1c561fa8b0d78e37f0bcac84237
    - type: ConfigChange
  replicas: 1
  revisionHistoryLimit: 10
  test: false
  selector:
    name: coffee-shop-database
  template:
    metadata:
      labels:
        name: coffee-shop-database
        app: coffee-shop
    spec:
      volumes:
        - name: coffee-shop-database-data
          persistentVolumeClaim:
            claimName: coffee-shop-database
      containers:
        - resources:
            limits:
              memory: 512Mi
          readinessProbe:
            exec:
              command:
                - /usr/libexec/check-container
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          name: postgresql
          livenessProbe:
            exec:
              command:
                - /usr/libexec/check-container
                - '--live'
            initialDelaySeconds: 120
            timeoutSeconds: 10
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          securityContext:
            capabilities: {}
            privileged: false
          ports:
            - containerPort: 5432
              protocol: TCP
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: coffee-shop-database-data
              mountPath: /var/lib/pgsql/data
          image: >-
            image-registry.openshift-image-registry.svc:5000/openshift/postgresql@sha256:6d97b69c1dd606d5ca679bbae3d6e6a8073bb1c561fa8b0d78e37f0bcac84237
---
kind: Service
apiVersion: v1
metadata:
  name: coffee-shop-database
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  ports:
    - name: postgresql
      protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    name: coffee-shop-database
