coffee-shop/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  labels:
    app.kubernetes.io/component: coffee-shop
    app.kubernetes.io/instance: coffee-shop
    app.kubernetes.io/part-of: coffee-shop
    app.openshift.io/runtime: quarkus
  name: coffee-shop
spec:
  ports:
  - name: 8080-tcp
    port: 8080
  - name: 8443-tcp
    port: 8443
  - name: 8778-tcp
    port: 8778
